Upd: README, renaming
