# neatly/docs/swagger.yaml
@@ -1,24 +1,30 @@
 basePath: /
 definitions:
-  auth.JwtDTO:
-    properties:
-      token:
-        type: string
-    type: object
-  auth.LoginAccountDTO:
+  account.LoginAccountDTO:
     properties:
       password:
         type: string
       username:
         type: string
     type: object
-  auth.RegisterAccountDTO:
+  account.RegisterAccountDTO:
     properties:
       email:
         type: string
       name:
         type: string
       password:
+        type: string
+      username:
+        type: string
+    type: object
+  account.WithTokenDTO:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      token:
         type: string
       username:
         type: string
@@ -56,6 +62,8 @@ definitions:
       body:
         type: string
       color:
+        type: string
+      edited:
         type: string
       header:
         type: string
@@ -116,7 +124,7 @@ definitions:
       name:
         type: string
     type: object
-host: localhost:8080
+host: localhost:8000
 info:
   contact: {}
   description: API Server for notes-taking applications
@@ -124,7 +132,7 @@ info:
   title: Neat.ly API
   version: "1.0"
 paths:
-  /api/v1/auth/login:
+  /api/v1/accounts/login:
     post:
       consumes:
       - application/json
@@ -136,14 +144,14 @@ paths:
         name: dto
         required: true
         schema:
-          $ref: '#/definitions/auth.LoginAccountDTO'
+          $ref: '#/definitions/account.LoginAccountDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.JwtDTO'
+            $ref: '#/definitions/account.WithTokenDTO'
         "500":
           description: Internal Server Error
           schema:
@@ -154,8 +162,8 @@ paths:
             $ref: '#/definitions/e.ErrorResponse'
       summary: Login
       tags:
-      - auth
-  /api/v1/auth/register:
+      - account
+  /api/v1/accounts/register:
     post:
       consumes:
       - application/json
@@ -167,12 +175,14 @@ paths:
         name: dto
         required: true
         schema:
-          $ref: '#/definitions/auth.RegisterAccountDTO'
+          $ref: '#/definitions/account.RegisterAccountDTO'
       produces:
       - application/json
       responses:
         "201":
           description: Created
+          schema:
+            type: string
         "500":
           description: Internal Server Error
           schema:
@@ -192,10 +202,10 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/note.GetAllNotesDTO'
         "400":
           description: Bad Request
           schema:
@@ -271,10 +281,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            type: integer
+        "204":
+          description: No Content
         "500":
           description: Internal Server Error
           schema:
@@ -618,6 +626,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update tag by ID
+      tags:
+      - tags
+  /api/v1/tags/{id}/tags/{tag_id}:
+    delete:
+      consumes:
+      - application/json
+      description: detach tag by ID from note by ID
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: tag id
+        in: path
+        name: tag_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/e.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Detach tag by ID from note by ID
       tags:
       - tags
 securityDefinitions:
