# neatly/internal/model/account/model.go
@@ -1,7 +1,9 @@
-package auth
+package account
 
 import (
 	"fmt"
+	"github.com/go-ozzo/ozzo-validation/v4"
+	"github.com/go-ozzo/ozzo-validation/v4/is"
 	"golang.org/x/crypto/bcrypt"
 	"neatly/pkg/e"
 )
@@ -15,12 +17,20 @@ type Account struct {
 	PasswordHash string `json:"password" binding:"required" db:"password_hash"`
 }
 
-func (u *Account) CheckPassword(password string) error {
-	err := bcrypt.CompareHashAndPassword([]byte(u.PasswordHash), []byte(password))
+func (a *Account) CheckPassword(password string) error {
+	err := bcrypt.CompareHashAndPassword([]byte(a.PasswordHash), []byte(password))
 	if err != nil {
 		return &e.PasswordDoesNotMatchErr{}
 	}
 	return nil
+}
+
+func (a *Account) Validate() error {
+	return validation.ValidateStruct(
+		a,
+		validation.Field(&a.Email, validation.Required, is.Email),
+		validation.Field(&a.Password, validation.Required, validation.Length(6, 100)),
+	)
 }
 
 func GeneratePasswordHash(password string) (string, error) {
